comments, corrections, amenities

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" alt="" /></a>
                 </div>
                 <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
@@ -94,19 +94,19 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Imię i nazwisko" required>
                             <div class="invalid-feedback">
-                                Pole jest wymagane.
+                                Pole jest wymagane
                             </div>
                         </div>
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="E-mail" required>
                             <div class="invalid-feedback">
-                                Pole jest wymagane.
+                                Pole jest wymagane
                             </div>
                         </div>
                         <div class="form-group">
                             <textarea class="form-control" placeholder="Wiadomość" required></textarea>
                             <div class="invalid-feedback">
-                                Pole jest wymagane.
+                                Pole jest wymagane
                             </div>
                         </div>
                         <input type="submit" class="btn btn-primary btn-submit pull-right" value="Wyślij wiadomość">
@@ -167,7 +167,7 @@
 <footer class="footersite">
     <div class="container">
         <div class="footersite-data row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="logo">
                     <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                 </div>
@@ -177,7 +177,7 @@
                     <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-5">
                 <div class="header">
                     <h6 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h6>
                 </div>
