--- a/courses_closed_details.html
+++ b/courses_closed_details.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" alt="" /></a>
                 </div>
                 <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
@@ -76,16 +76,18 @@
         <div class="container contentbox-main-hld">
             <div class="row contentbox-main">
                 <div class="col-lg-9 contentbox-action contentbox-action--top">
-                    <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
-                    <ul class="list list--social">
-                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                    </ul>
+                    <div class="contentbox-action-hld">
+                        <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
+                        <ul class="list list--social">
+                            <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                            <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                            <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                            <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                            <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-left">
                     <h3 class="header-title header-title--content"><span>Opis</span></h3>
                     <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkan temacie zwiększania skuteczności służb controllingowych i ich wpływu na rentowność przedsiębiorstw.</p>
                     <p><b>Podczas dwóch dni konferencyjnych, dkryją i poznają odpowiedzi na pytania:</b></p>
@@ -124,7 +126,7 @@
                         </li>
                     </ol>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-right">
                     <h3 class="header-title header-title--content"><span>Osoby docelowe</span></h3>
                     <ul>
                         <li>controllerzy</li>
@@ -134,22 +136,24 @@
                     </ul>
                     <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
                     <ul class="list list--file">
-                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo FNC Warszawa.pdf</a></li>
-                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">Promo CENY POZ.pdf</a></li>
+                        <li class="list-item"><a href="#">Promo FNC Warszawa.pdf</a></li>
+                        <li class="list-item"><a href="#">Promo CENY POZ.pdf</a></li>
                     </ul>
                     <h3 class="header-title header-title--content"><span>Wykładowca / Trener</span></h3>
-                    <p>Tomasz Targosz</p>
+                    <p class="author-name">Tomasz Targosz</p>
                     <p>Od 12 lat sprzedaje i szkoli handlowców. Uczył się technik sprzedaży od najlepszych, a dziś przekłada wiedzę na praktyczne warsztaty. Obala stare modele obsługi klientów i propaguje nowoczesny nurt sprzedażowy, oparty na poznaniu drugiej osoby poprzez obserwację, słuchanie i szczere zrozumienie. Współpracował m.in. z Ibis Hotel, Nordea Bank, Impel. Autor książek „Sprzedaż jest sexi” oraz „Martwa Sprzedaż”, cyklicznie pisuje do czasopism branżowych takich jak „Szef Sprzedaży”, „As Sprzedaży” i „Nowa Sprzedaż”.</p>
                 </div>
-                <div class="col-lg-12 contentbox-action contentbox-action--bottom">
-                    <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
-                    <ul class="list list--social">
-                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                    </ul>
+                <div class="col-lg-8 contentbox-action contentbox-action--bottom">
+                    <div class="contentbox-action-hld">
+                        <a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
+                        <ul class="list list--social">
+                            <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                            <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                            <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                            <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                            <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -159,7 +163,7 @@
 <footer class="footersite">
     <div class="container">
         <div class="footersite-data row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="logo">
                     <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                 </div>
@@ -169,7 +173,7 @@
                     <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-5">
                 <div class="header">
                     <h6 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h6>
                 </div>
