--- a/courses_open.html
+++ b/courses_open.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" alt="" /></a>
                 </div>
                 <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
@@ -115,14 +115,16 @@
                             </p>
                             <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
-                        <div class="popup-inline" style="margin: 0; position: absolute; top: 0; left: 0;right: 0; bottom: 0; border: none;">
+                        <div class="popup-inline popup-inline--listing">
                             <div class="close-hld js-popup-close">
                                 <i class="icon icon--close"></i>
                             </div>
                             <div class="header center">
-                                <h5 class="header-title header-title--section"><span>Termin szkolenia</span></h5>
+                                <h5 class="header-title header-title--section"><span>Proszę wybrać edycję szkolenia:</span></h5>
                             </div>
-                            <p>Proszę wybrać edycję szkolenia:</p>
+                            <a href="courses_open_details.html" class="btn btn-primary">Poznań, 22.08.2019</a>
+                            <a href="courses_open_details.html" class="btn btn-primary">Warszawa, 22-29.08.2019</a>
+                            <a href="courses_open_details.html" class="btn btn-primary">Gdańsk, 4.09.2019</a>
                             <a href="courses_open_details.html" class="btn btn-primary">Poznań, 22.08.2019</a>
                             <a href="courses_open_details.html" class="btn btn-primary">Warszawa, 22-29.08.2019</a>
                             <a href="courses_open_details.html" class="btn btn-primary">Gdańsk, 4.09.2019</a>
@@ -241,7 +243,7 @@
 <footer class="footersite">
     <div class="container">
         <div class="footersite-data row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="logo">
                     <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                 </div>
@@ -251,7 +253,7 @@
                     <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-5">
                 <div class="header">
                     <h6 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h6>
                 </div>
