--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" alt="" /></a>
                 </div>
                 <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
@@ -213,25 +213,26 @@
 
 <section class="container">
     <header class="header center">
-        <h5 class="header-title header-title--name"><span>Zobacz również</span></h5>
+        <h5 class="header-title header-title--name"><span>Polecane publikacje</span></h5>
     </header>
     <div class="row">
         <article class="col-lg-6 itembox">
             <figure class="col-lg-4 itembox-image-hld">
-                <span class="label label-itembox">forum</span>
-                <a href="courses_open_details.html">
+                <span class="label label-itembox">książka</span>
+                <a href="publications_details.html">
                     <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                 </a>
             </figure>
             <div class="col-lg-8 itembox-data">
                 <header class="itembox-header">
-                    <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
-                    <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    <h2 class="itembox-header-title"><a href="publications_details.html">Kurs wiedzy o winie</a></h2>
+                    <h3 class="itembox-header-subtitle">Windows of the World, 4. wydanie polskie. zaktualizowane i rozszerzone</h3>
                 </header>
                 <div class="itembox-body">
                     <div class="itembox-action">
-                        <p>Wykładowcy: Zespół ekspertów</p>
-                        <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
+                        <p class="price price--action">Cena: <span class="price-value">193,32</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
+                        <p>Autor: Zespół autorów</p>
+                        <a href="publications_details.html" class="btn btn-border">Szczegóły</a>
                     </div>
 
                 </div>
@@ -239,20 +240,21 @@
         </article>
         <article class="col-lg-6 itembox">
             <figure class="col-lg-4 itembox-image-hld">
-                <span class="label label-itembox">e-kurs mailowy</span>
-                <a href="courses_open_details.html">
+                <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
+                <a href="publications_details.html">
                     <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                 </a>
             </figure>
             <div class="col-lg-8 itembox-data">
                 <header class="itembox-header">
-                    <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
-                    <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                    <h2 class="itembox-header-title"><a href="publications_details.html">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h2>
+                    <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
                 </header>
                 <div class="itembox-body">
                     <div class="itembox-action">
-                        <p>Wykładowcy: Zespół ekspertów</p>
-                        <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        <p class="price price--action">Cena: <span class="price-value">193,32</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
+                        <p>Autor: Zespół autorów</p>
+                        <a href="publications_details.html" class="btn btn-border">Szczegóły</a>
                     </div>
 
                 </div>
@@ -260,20 +262,20 @@
         </article>
         <article class="col-lg-6 itembox">
             <figure class="col-lg-4 itembox-image-hld">
-                <span class="label label-itembox">forum</span>
-                <a href="courses_open_details.html">
+                <span class="label label-itembox">czasopismo specjalistyczne</span>
+                <a href="publications_details.html">
                     <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                 </a>
             </figure>
             <div class="col-lg-8 itembox-data">
                 <header class="itembox-header">
-                    <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
-                    <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    <h2 class="itembox-header-title"><a href="publications_details.html">Magazynowanie i Produkcja</a></h2>
                 </header>
                 <div class="itembox-body">
                     <div class="itembox-action">
+                        <p class="price price--action">Cena: <span class="price-value">193,32</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
                         <p>Wykładowcy: Zespół ekspertów</p>
-                        <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
+                        <a href="publications_details.html" class="btn btn-border">Szczegóły</a>
                     </div>
 
                 </div>
@@ -281,20 +283,21 @@
         </article>
         <article class="col-lg-6 itembox">
             <figure class="col-lg-4 itembox-image-hld">
-                <span class="label label-itembox">e-kurs mailowy</span>
-                <a href="courses_open_details.html">
+                <span class="label label-itembox">czasopismo specjalistyczne</span>
+                <a href="publications_details.html">
                     <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                 </a>
             </figure>
             <div class="col-lg-8 itembox-data">
                 <header class="itembox-header">
-                    <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
-                    <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                    <h2 class="itembox-header-title"><a href="publications_details.html">Sell it in English</a></h2>
+                    <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
                 </header>
                 <div class="itembox-body">
                     <div class="itembox-action">
+                        <p class="price price--action">Cena: <span class="price-value">193,32</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
                         <p>Wykładowcy: Zespół ekspertów</p>
-                        <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        <a href="publications_details.html" class="btn btn-border">Szczegóły</a>
                     </div>
                 </div>
             </div>
@@ -352,7 +355,7 @@
 <footer class="footersite">
     <div class="container">
         <div class="footersite-data row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="logo">
                     <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                 </div>
@@ -362,7 +365,7 @@
                     <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-5">
                 <div class="header">
                     <h6 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h6>
                 </div>
