--- a/courses_register.html
+++ b/courses_register.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" alt="" /></a>
                 </div>
                 <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
@@ -129,14 +129,14 @@
                                 <label>Nazwa firmy<span class="required">*</span></label>
                                 <input type="text" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label>NIP<span class="required">*</span></label>
                                 <input type="text" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                         </div>
@@ -145,14 +145,14 @@
                                 <label>Ulica, nr domu/loka<span class="required">*</span></label>
                                 <input type="text" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label>Kod pocztowy<span class="required">*</span></label>
                                 <input type="text" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                         </div>
@@ -161,14 +161,14 @@
                                 <label>Miasto<span class="required">*</span></label>
                                 <input type="text" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label>Telefon<span class="required">*</span></label>
                                 <input type="text" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                                 <label>Fax</label>
                                 <input type="text" class="form-control">
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                                 <label>Jeżeli adres korespodencyjny jest odmienny od fakturowego proszę wpisać uwagi.</label>
                                 <textarea class="form-control" placeholder=""></textarea>
                                 <div class="invalid-feedback">
-                                    Pole jest wymagane.
+                                    Pole jest wymagane
                                 </div>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                         <div class="custom-control custom-checkbox mb-3">
                             <input type="checkbox" class="custom-control-input" id="customCheck1" required>
                             <label class="custom-control-label" for="customCheck1">Akceptuje <a href="#">regulamin sprzedaży</a> oraz potwierdzam zaznajomienie się z <a href="#">Polityką Prywatności</a>.</label>
-                            <div class="invalid-feedback">Pole jest wymagane.</div>
+                            <div class="invalid-feedback">Pole jest wymagane</div>
                         </div>
                         <div class="custom-control custom-checkbox mb-3">
                             <input type="checkbox" class="custom-control-input" id="customCheck2" required>
@@ -234,7 +234,7 @@
                                 <span class="break"><b>Tak, chcę być informowany o kolejnych edycjach, wydarzeniach branżowych, specjalnych ofertach i nowych produktach</b>, dlatego zgadzam się na kontakt drogą mailową lub z wykorzystaniem telekomunikacyjnych urządzeń końcowych.</span>
                                 <span class="break">Wyrażenie zgody jest dobrowolne. Administratorem danych osobowych jest firma Explanator – Iwona Dehina, z siedzibą przy ul. Kościelnej 30 lok. 59, Poznań 60-538, NIP: 778-115-70-12. Dane osobowe przetwarzane będą w celu realizacji zamówienia oraz dostarczania informacji o produktach zgodnie z Polityką Prywatności. Mają Państwo prawo dostępu do swoich danych, ich poprawiania oraz cofnięcia zgody w dowolnym momencie poprzez kontakt: <a href="mailto:marketing@explanator.pl">marketing@explanator.pl</a>.</span>
                             </label>
-                            <div class="invalid-feedback">Pole jest wymagane.</div>
+                            <div class="invalid-feedback">Pole jest wymagane</div>
                         </div>
                         <p><span class="required">*</span> Pola oznaczone gwiazdką są wymagane.</p>
                         <input type="submit" class="btn btn-primary btn-submit pull-right" value="Wyślij zgłoszenie">
@@ -248,7 +248,7 @@
 <footer class="footersite">
     <div class="container">
         <div class="footersite-data row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="logo">
                     <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                 </div>
@@ -258,7 +258,7 @@
                     <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-5">
                 <div class="header">
                     <h6 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h6>
                 </div>
