--- a/publications_details.html
+++ b/publications_details.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="col logo">
-                    <a href="index.html"><img src="images/explanator-red.svg" class="img-fluid" alt="" /></a>
+                    <a href="index.html"><img src="images/explanator-red.svg" alt="" /></a>
                 </div>
                 <nav class="col-lg-auto navbar">
                     <ul class="navbar-inner">
@@ -73,7 +73,7 @@
         <div class="container contentbox-main-hld">
             <div class="row contentbox-main">
                 <div class="col-lg-9 contentbox-action contentbox-action--top">
-                    <div class="popup-inline js-popup-hide">
+                    <div class="popup-inline popup-inline--details js-popup-hide">
                         <div class="close-hld js-popup-close">
                             <i class="icon icon--close"></i>
                         </div>
@@ -84,20 +84,19 @@
                         <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
                         <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
                     </div>
-                    <div class="col-lg-5 price-hld">
+                    <div class="contentbox-action-hld">
                         <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-                        <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
+                        <span class="btn btn-primary js-popup-show">Zamów</span>
+                        <ul class="list list--social">
+                            <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                            <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                            <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                            <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                            <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                        </ul>
                     </div>
-                    <span class="btn btn-primary js-popup-show">Zamów</span>
-                    <ul class="list list--social">
-                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                    </ul>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-left">
                     <h3 class="header-title header-title--content"><span>Opis</span></h3>
                     <p>Ta unikalna, zwarta publikacja stanowi kompendium wiedzy, którą każdy menadżer powinien posiadać w zasięgu ręki. Klarowny podział publikacji pozwala na przyjazną nawigację po zagadnieniach związanych z regulacjami Kodeksu spółek handlowych. Dodatkowo, w uporządkowany sposób przedstawiane są kluczowe aspekty odpowiedzialności prawnej kadry zarządzającej.</p>
                     <p>Pierwsza część poradnika zawiera kwintesencję wiedzy na temat:</p>
@@ -142,22 +141,22 @@
                         <li class="list-item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" alt="" /></li>
                     </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-right">
                     <h3 class="header-title header-title--content"><span>Informacje techniczne</span></h3>
                     <p>ISBN: 978-83-931703-6-4</p>
                     <p>Format: A5, segregator</p>
                     <p>Objętość: około 1300 stron</p>
                     <h3 class="header-title header-title--content"><span>Materiały do pobrania</span></h3>
                     <ul class="list list--file">
-                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna info z kuponem.pdf</a></li>
-                        <li class="list-item"><i class="icon icon--file"></i> <a href="#">KSH i odpowiedzialność prawna SPIS TREŚCI.pdf</a></li>
+                        <li class="list-item"><a href="#">KSH i odpowiedzialność prawna info z kuponem.pdf</a></li>
+                        <li class="list-item"><a href="#">KSH i odpowiedzialność prawna SPIS TREŚCI.pdf</a></li>
                     </ul>
                     <h3 class="header-title header-title--content"><span>Autor</span></h3>
-                    <p>Zespół autorów</p>
+                    <p class="author-name">Zespół autorów</p>
                     <p>Z poradnikiem współpracują liczni praktycy życia gospodarczego, specjaliści w swoich dziedzinach, prawnicy doskonale osadzeni w realiach gospodarczych.</p>
                 </div>
-                <div class="col-lg-12 contentbox-action contentbox-action--bottom">
-                    <div class="popup-inline js-popup-hide">
+                <div class="col-lg-8 contentbox-action contentbox-action--bottom">
+                    <div class="popup-inline popup-inline--details js-popup-hide">
                         <div class="close-hld js-popup-close">
                             <i class="icon icon--close"></i>
                         </div>
@@ -168,18 +167,17 @@
                         <a href="#" class="btn btn-primary">Formularz przesłany FAXem</a>
                         <a href="courses_register.html" class="btn btn-primary">Formularz wypełniany on-line</a>
                     </div>
-                    <div class="col-lg-5 price-hld">
+                    <div class="contentbox-action-hld">
                         <p class="price">Cena: <span class="price-value">99</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-                        <p>(+ koszty wysyłki 25,20 zł brutto, wysyłka kurierem)</p>
+                        <span class="btn btn-primary js-popup-show">Zamów</span>
+                        <ul class="list list--social">
+                            <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
+                            <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
+                            <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
+                            <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
+                            <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
+                        </ul>
                     </div>
-                    <span class="btn btn-primary js-popup-show">Zamów</span>
-                    <ul class="list list--social">
-                        <li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
-                        <li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
-                        <li class="list-item list-item--linkedin"><a href="#"><i class="icon icon--linkedin"></i></a></li>
-                        <li class="list-item list-item--envelope"><a href="#"><i class="icon icon--envelope"></i></a></li>
-                        <li class="list-item list-item--print"><a href="#"><i class="icon icon--print"></i></a></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -189,7 +187,7 @@
 <footer class="footersite">
     <div class="container">
         <div class="footersite-data row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="logo">
                     <a href="index.html"><img src="images/explanator-turquoise.svg" class="img-fluid" alt="" /></a>
                 </div>
@@ -199,7 +197,7 @@
                     <li class="list-item"><i class="icon icon--location"></i>Kościelna 30 lok. 59</li>
                 </ul>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-5">
                 <div class="header">
                     <h6 class="header-title header-title--section  header-title--white"><span>Na skróty</span></h6>
                 </div>
