--- a/courses_open_details.html
+++ b/courses_open_details.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="event-details">
                             <p class="city"><i class="icon icon--calendar"></i> Warszawa, 24-25.10.2019</p>
-                            <p class="location ml-40"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
+                            <p class="ml-40 location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
                         </div>
                     </header>
                 </div>
