--- a/courses_register.html
+++ b/courses_register.html
@@ -69,7 +69,7 @@
                     </hgroup>
                     <div class="event-details event-details--form">
                         <p class="city"><i class="icon icon--calendar"></i> Warszawa, 24-25.10.2019</p>
-                        <p class="location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
+                        <p class="ml-40 location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
                     </div>
                 </header>
             </div>
