--- a/courses_register.html
+++ b/courses_register.html
@@ -102,7 +102,7 @@
                             <label class="col-form-label">Okreś liczbę uczestników:</label>
                             <div class="input-group input-group-number">
                                 <span class="input-number-decrement">-</span>
-                                <input type="input" class="form-control form-control-number input-number" value="1">
+                                <input type="number" class="form-control form-control-number input-number" value="1">
                                 <span class="input-number-increment">+</span>
                             </div>
                         </div>
@@ -266,7 +266,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </section>
     </article>
 </main>
 
